--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,11 @@ jobs:
       with:
         python-version: 3.9.4
         architecture: x64
-
+    - name: Install dependencies
+      run: |
+        python3 -m pip install --upgrade pip
+        pip3 install httpx
+        
     - name: Checkout Resource
       uses: actions/checkout@v2
       
