--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install dependencies
       run: |
         python3 -m pip install --upgrade pip
-        pip3 install httpx
+        pip3 install httpx lxml
         
     - name: Checkout Resource
       uses: actions/checkout@v2
